# FACTORY.AI

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
src/: AGIApp.tsx  App.tsx  AppEnhanced.tsx
src-tauri/: Cargo.toml
src/services/: agiCompanion.ts  agiCompanionComplete.ts  agiCompanionService.ts  knowledgeBase.ts  openai.ts
