[package]
name = "factory-starter-app"
version = "0.1.0"
description = "A minimal Tauri starter application for Factory tutorial"
authors = ["Factory AI"]
license = "MIT"
repository = "https://github.com/enoreyes/starter-app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["dialog-all", "shell-open", "window-all"] }

# --- Added for advanced AGI capabilities ---
# Database & persistence
rusqlite = { version = "0.31", features = ["bundled"] }
# File processing
lopdf = "0.32.0"
calamine = "0.22.1"
# Networking / HTTP
reqwest = { version = "0.11", features = ["json"] }
# Async runtime
tokio = { version = "1.37", features = ["full"] }
# Text & utility
regex = "1"
uuid = { version = "1", features = ["v4"] }
# Security / Encryption
sha2 = "0.10"
base64 = "0.21"
# Filesystem utilities
walkdir = "2.5"
# Date & time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
# GitHub API
octocrab = "0.32"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
